Fixed cropped icons in iOS

--- a/_src/sass/components/_icons.scss
+++ b/_src/sass/components/_icons.scss
@@ -11,8 +11,8 @@
     fill: $type;
   }
   &--individual {
-    width: 1em;
-    height: 1em;
+    width: 1.1em;
+    height: 1.1em;
     margin-left: 0;
     margin-right: ($content-margin / 4);
   }
